--- a/src/Eluander.Shared.IoC/Eluander.Shared.IoC.csproj
+++ b/src/Eluander.Shared.IoC/Eluander.Shared.IoC.csproj
@@ -5,11 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.6" />
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="..\Eluander.Infra.Identity\Eluander.Infra.Identity.csproj" />
+    <ProjectReference Include="..\Eluander.Shared.Core\Eluander.Shared.Core.csproj" />
   </ItemGroup>
 
 </Project>
